# PicoSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  config.json  core.py  crctest.py  out_core.cpp
.github/workflows/: build.yaml  make_public.yaml
.github/workflows_public/: build.yaml
app/: CMakeLists.txt  loader.cpp  loader.hpp  main.cpp  schema.cpp  schema.hpp
extlib/: CMakeLists.txt
extlib/epdsim/: CMakeLists.txt  display_driver.cpp  display_driver.hpp  factory.cpp  factory.hpp  gui.cpp  gui.hpp  interface.cpp  interface.hpp
include/: async.hpp  bus.hpp  clock.hpp  config.h  divider.hpp  fifo.hpp  interrupt.hpp  memory_device.hpp  reset.hpp  rosc.hpp  rp2040.hpp  simulation.hpp
include/arch/arm/amba/: apb.hpp
include/arch/arm/armv6m/: core.hpp  exception.hpp  nvic.hpp  opcodes.hpp
include/arch/arm/peri/pl011/: pl011.hpp
include/armv6m/: core.hpp  exception.hpp  nvic.hpp  opcodes.hpp
include/common/: callable.hpp  debug.hpp  gpio.hpp  interrupt.hpp
include/debug/: gdbserver.hpp  rp2040_gdb.hpp
include/ext/: component.hpp
include/ext/chips/: w25q_flash.hpp
include/ext/io/: device.hpp  net.hpp  pin.hpp  pulls.hpp  resistor.hpp  spi_master.hpp  spidev.hpp
include/platform/rpi/rp2040/: bootloader.hpp  gpio.hpp  peripheral.hpp  rp2040.hpp
include/platform/rpi/rp2040/bus/: ahb_lite.hpp  apb.hpp
include/platform/rpi/rp2040/core/: divider.hpp  spinlock.hpp
include/platform/rpi/rp2040/peri/: clocks.hpp  i2c.hpp  io_bank0.hpp  io_qspi.hpp  pads_bank0.hpp  pll.hpp  (+16 more)
include/rp2040/: gpio.hpp  pad.hpp  peripheral.hpp
include/rp2040/bus/: ahb.hpp  ahb_lite.hpp  apb.hpp
include/rp2040/core/: divider.hpp  fifo.hpp
include/rp2040/peri/: clocks.hpp  i2c.hpp  io_bank0.hpp  io_qspi.hpp  pads_bank0.hpp  pads_qspi.hpp  pll.hpp  psm.hpp  resets.hpp  rtc.hpp  spi.hpp  ssi.hpp  syscfg.hpp  tbman.hpp  timer.hpp  uart.hpp  usb.hpp  vreg.hpp  watchdog.hpp  xip.hpp  xosc.hpp
include/rp2040/peri/dma/: dma.hpp  dreq.hpp  treq.hpp
include/rp2040/peri/pio/: pio.hpp
include/tracing/: vcd.hpp  wire.hpp
include/usb/: common.hpp  device.hpp  host.hpp  pid.hpp  transceiver.hpp  usbip_server.hpp
include/util/: array_converter.hpp  saturating_counter.hpp
src/: CMakeLists.txt  clock.cpp  memory_device.cpp  rp2040.cpp  rp2040_bootloader.cpp  simulation.cpp
src/arch/arm/armv6m/: core.cpp  mpu.cpp
src/armv6m/: core.cpp  mpu.cpp
src/bus/: apb.cpp
src/common/: gpio.cpp
src/debug/: rp2040_gdb.cpp
src/ext/io/: net.cpp
src/platform/rpi/rp2040/: bootloader.cpp  gpio.cpp  pad.cpp  rp2040.cpp
src/rp2040/: gpio.cpp  pad.cpp
src/rp2040/bus/: ahb.cpp  ahb_lite.cpp  apb.cpp
src/rp2040/peri/: clocks.cpp  io_qspi.cpp  ssi.cpp  xip.cpp
src/rp2040/peri/dma/: dma.cpp  dreq.cpp
src/tracing/: vcd.cpp
src/usb/: common.cpp  device.cpp  host.cpp  usbip_server.cpp
test/: config.json
tests/: CMakeLists.txt  picosim_tests.cpp
tests/embed/rp2040/: CMakeLists.txt  tests.cpp
tests/util/: sha256.h
(+13 files in other folders)
